--- a/app/src/main/res/layout/activity_sortin_summary.xml
+++ b/app/src/main/res/layout/activity_sortin_summary.xml
@@ -32,18 +32,37 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开始日期"
+                android:text="日期"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_start_time"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="5dp"
                 android:background="@drawable/shape_spinnner_normal"
                 android:gravity="center"
-                android:layout_marginRight="15dp"
-                android:text="点击选择"
+                android:text="选择开始日期"
+                android:textSize="14sp"
+                android:theme="@style/customer_spinner_style" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="~"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_end_time"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@drawable/shape_spinnner_normal"
+                android:gravity="center"
+                android:text="选择结束日期"
+                android:layout_marginRight="10dp"
                 android:textSize="14sp"
                 android:theme="@style/customer_spinner_style" />
         </LinearLayout>
@@ -51,6 +70,7 @@
 
     </LinearLayout>
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -74,16 +94,7 @@
                 android:text="结束日期"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/tv_end_time"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/shape_spinnner_normal"
-                android:gravity="center"
-                android:text="点击选择"
-                android:textSize="14sp"
-                android:theme="@style/customer_spinner_style" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -95,28 +106,37 @@
         android:layout_marginTop="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
 
 
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="员工"
-            android:textSize="16sp" />
+
 
         <TextView
             android:id="@+id/tv_select_person"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:layout_marginLeft="35dp"
             android:background="@drawable/shape_spinnner_normal"
             android:gravity="center"
-            android:text="点击选择"
+            android:text="请选择员工"
             android:textSize="14sp"
             android:theme="@style/customer_spinner_style" />
+
+        <TextView
+            android:id="@+id/tv_select_dept"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/shape_spinnner_normal"
+            android:gravity="center"
+            android:text="请选择部门"
+            android:textSize="14sp"
+            android:theme="@style/customer_spinner_style" />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -125,6 +145,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="20dp"
+        android:visibility="gone"
         android:paddingRight="20dp">
 
 
@@ -136,16 +157,7 @@
             android:text="部门"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tv_select_dept"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="35dp"
-            android:background="@drawable/shape_spinnner_normal"
-            android:gravity="center"
-            android:text="点击选择"
-            android:textSize="14sp"
-            android:theme="@style/customer_spinner_style" />
+
     </LinearLayout>
 
 
@@ -166,39 +178,43 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:text="分拣人"
+            android:background="@drawable/shape_normal"
             android:gravity="center"
             android:textSize="14sp"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:text="品类"
+            android:background="@drawable/shape_normal"
             android:gravity="center"
             android:textSize="14sp"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:text="分拣数量"
+            android:background="@drawable/shape_normal"
             android:gravity="center"
             android:textSize="14sp"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:text="计件金额"
+            android:background="@drawable/shape_normal"
             android:gravity="center"
             android:textSize="14sp"
             />
