--- a/app/src/main/res/layout/item_summary.xml
+++ b/app/src/main/res/layout/item_summary.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="40dp">
     <LinearLayout
+        android:id="@+id/linear_line"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_height="40dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_person"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:gravity="center"
             android:textSize="14sp"
             />
@@ -21,7 +21,7 @@
             android:id="@+id/tv_category"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:gravity="center"
             android:textSize="14sp"
             />
@@ -29,7 +29,7 @@
             android:id="@+id/tv_count"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:gravity="center"
             android:textSize="14sp"
             />
@@ -37,7 +37,7 @@
             android:id="@+id/tv_pay"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:gravity="center"
             android:textSize="14sp"
             />
